--- a/aflam-modblaja-2024.html
+++ b/aflam-modblaja-2024.html
@@ -435,7 +435,31 @@ box-shadow: 0 0 5px #fff;
                <!-- ✅  زر الفيلم -->
                <!-- ✅  زر الفيلم -->
                <!-- ✅  زر الفيلم -->
-               <!-- ✅  زر الفيلم -->             
+               <!-- ✅  زر الفيلم --> 
+               <button class="button">
+    <img src="https://resizing.flixster.com/D6aLbOtCJdj4ItAJL_UgDI_lzzA=/206x305/v2/https://resizing.flixster.com/_x0c5upSiIw9mG2fBhrWNym8HL0=/ems.cHJkLWVtcy1hc3NldHMvbW92aWVzL2Q2YjA4NzcwLWQ0ZmItNGNiMC04NWZhLWJhN2Y0MTNmYjY2MS5qcGc=" alt="app tv"onerror="handleImageError(this)">
+     <div class="mov-name">
+<div class="tv-name-inner" >Gazer-(2025)-Gazer</div></div> 
+        <div class="link">سيرفرات المشاهدة</div> 
+           <div class="number-container">
+<div class="number" 
+     data-link="intent://dl.dropbox.com/scl/fi/kvuqm3affj9nwdj27h93x/Cimawbas-Gazer.2024..CAMRip.AR.DUB.1x.mkv.mp4?rlkey=tsw666mm9bf26bn6ty2pgkxa9&st=u41njcdw&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
+     onclick="playStream(this)" 
+     id="btn1" 
+     tabindex="1">FHD</div>
+
+<div class="number" 
+     data-link="intent://dl.dropbox.com/scl/fi/kvuqm3affj9nwdj27h93x/Cimawbas-Gazer.2024..CAMRip.AR.DUB.1x.mkv.mp4?rlkey=tsw666mm9bf26bn6ty2pgkxa9&st=u41njcdw&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
+     onclick="playStream(this)" 
+     id="btn2" 
+     tabindex="1">HD</div>
+     
+<div class="number" 
+     data-link="intent://dl.dropbox.com/scl/fi/kvuqm3affj9nwdj27h93x/Cimawbas-Gazer.2024..CAMRip.AR.DUB.1x.mkv.mp4?rlkey=tsw666mm9bf26bn6ty2pgkxa9&st=u41njcdw&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
+     onclick="playStream(this)" 
+     id="btn2" 
+     tabindex="1">SD</div>
+ </div ></button> 
                <!-- ✅  زر الفيلم -->
 <button class="button">
     <img src="https://resizing.flixster.com/CviRrn1xZu330ox-GTE1Z43VPT0=/fit-in/705x460/v2/https://resizing.flixster.com/lhK0oLW4tDuLVhIrRB41BMaIkJU=/ems.cHJkLWVtcy1hc3NldHMvbW92aWVzLzk2NzBlMWIyLWJhNzItNDM2OS04ZmM2LWVlNzcxNjFhZGYwNy5qcGc=" alt="app tv"onerror="handleImageError(this)">
@@ -444,26 +468,26 @@ box-shadow: 0 0 5px #fff;
         <div class="link">سيرفرات المشاهدة</div> 
            <div class="number-container">
 <div class="number" 
-     data-link="intent://dl.dropbox.com/scl/fi/3nzfwg1yenqg0cz83ikcy/On.Swift.Horses.24.AR.DUB..mp4?rlkey=vpwg6xtabxugu77466i9l1olw&st=db8tdwpb&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
+     data-link="intent://dl.dropbox.com/scl/fi/tt43grdzn8c4q6b03hgnu/Mission.Impossible.The.Final.Reckoning.25.AR.DUB.mp4?rlkey=lexa8sc3ofxi6u1cbaay9jgxe&st=94gfgoba&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
      onclick="playStream(this)" 
      id="btn1" 
      tabindex="1">FHD</div>
 
 <div class="number" 
-     data-link="intent://dl.dropbox.com/scl/fi/3nzfwg1yenqg0cz83ikcy/On.Swift.Horses.24.AR.DUB..mp4?rlkey=vpwg6xtabxugu77466i9l1olw&st=db8tdwpb&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
+     data-link="intent://dl.dropbox.com/scl/fi/tt43grdzn8c4q6b03hgnu/Mission.Impossible.The.Final.Reckoning.25.AR.DUB.mp4?rlkey=lexa8sc3ofxi6u1cbaay9jgxe&st=94gfgoba&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
      onclick="playStream(this)" 
      id="btn2" 
      tabindex="1">HD</div>
      
 <div class="number" 
-     data-link="intent://dl.dropbox.com/scl/fi/3nzfwg1yenqg0cz83ikcy/On.Swift.Horses.24.AR.DUB..mp4?rlkey=vpwg6xtabxugu77466i9l1olw&st=db8tdwpb&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
+     data-link="intent://dl.dropbox.com/scl/fi/tt43grdzn8c4q6b03hgnu/Mission.Impossible.The.Final.Reckoning.25.AR.DUB.mp4?rlkey=lexa8sc3ofxi6u1cbaay9jgxe&st=94gfgoba&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
      onclick="playStream(this)" 
      id="btn2" 
      tabindex="1">SD</div>
  </div ></button> 
                <!-- ✅  زر الفيلم -->
 <button class="button">
-    <img src="https://image.tmdb.org/t/p/w780/okWSsqAPsrIAwKa9CivsBiU84ZI.jpg" alt="app tv"onerror="handleImageError(this)">
+    <img src="https://i.imgur.com/AwOaWaO.jpeg" alt="app tv"onerror="handleImageError(this)">
      <div class="mov-name">
 <div class="tv-name-inner" >Mexico 86-(2025)-المكسيك 86 </div></div> 
         <div class="link">سيرفرات المشاهدة</div> 
@@ -538,7 +562,7 @@ box-shadow: 0 0 5px #fff;
                <!-- ✅  زر الفيلم -->
 
                <button class="button">
-    <img src="https://image.tmdb.org/t/p/w780/rRkM4hAoT9wMPsYeHj2SdgJ3lmz.jpg" alt="app tv"onerror="handleImageError(this)">
+    <img src="https://i.imgur.com/p988Uxn.jpeg" alt="app tv"onerror="handleImageError(this)">
      <div class="mov-name">
 <div class="tv-name-inner" >The Devils Bride-(2024)-عروس الشيطان</div></div> 
         <div class="link">سيرفرات المشاهدة</div> 
