--- a/aflam-modblaja-2024.html
+++ b/aflam-modblaja-2024.html
@@ -435,6 +435,30 @@ box-shadow: 0 0 5px #fff;
                <!-- ✅  زر الفيلم -->
                <!-- ✅  زر الفيلم -->
                <!-- ✅  زر الفيلم -->
+                 <button class="button">
+    <img src="https://resizing.flixster.com/fdgrdkkK5IYGx10bmp5RGVUX7Dc=/fit-in/705x460/v2/https://resizing.flixster.com/F_sBk5tMHgElDAE7FymhDvYNAOI=/ems.cHJkLWVtcy1hc3NldHMvbW92aWVzLzI3ZTJjMGE4LTQwZTYtNDllOC05OTdlLTBjYTg0MGIzMzIwNy53ZWJw" alt="app tv"onerror="handleImageError(this)">
+     <div class="mov-name">
+<div class="tv-name-inner" >Moana 1-(2016)-Moana</div></div> 
+        <div class="link">سيرفرات المشاهدة</div> 
+           <div class="number-container">
+<div class="number" 
+     data-link="intent://dl.dropbox.com/scl/fi/6yno8mq0ujka4yfw1csg0/Moana.1.2016.mp4?rlkey=dfmwffu2lslxftqomw6e343ij&st=sztqtwln&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
+     onclick="playStream(this)" 
+     id="btn1" 
+     tabindex="1">FHD</div>
+
+<div class="number" 
+     data-link="intent://dl.dropbox.com/scl/fi/6yno8mq0ujka4yfw1csg0/Moana.1.2016.mp4?rlkey=dfmwffu2lslxftqomw6e343ij&st=sztqtwln&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
+     onclick="playStream(this)" 
+     id="btn2" 
+     tabindex="1">HD</div>
+     
+<div class="number" 
+     data-link="intent://dl.dropbox.com/scl/fi/6yno8mq0ujka4yfw1csg0/Moana.1.2016.mp4?rlkey=dfmwffu2lslxftqomw6e343ij&st=sztqtwln&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
+     onclick="playStream(this)" 
+     id="btn2" 
+     tabindex="1">SD</div>
+ </div ></button> 
                <!-- ✅  زر الفيلم --> 
                <button class="button">
     <img src="https://resizing.flixster.com/D6aLbOtCJdj4ItAJL_UgDI_lzzA=/206x305/v2/https://resizing.flixster.com/_x0c5upSiIw9mG2fBhrWNym8HL0=/ems.cHJkLWVtcy1hc3NldHMvbW92aWVzL2Q2YjA4NzcwLWQ0ZmItNGNiMC04NWZhLWJhN2Y0MTNmYjY2MS5qcGc=" alt="app tv"onerror="handleImageError(this)">
