--- a/aflam-modblaja-2024.html
+++ b/aflam-modblaja-2024.html
@@ -433,9 +433,57 @@ box-shadow: 0 0 5px #fff;
               <!--+++++++++++++++++-->
                 <!-- ✅  زر الفيلم -->
                <!-- ✅  زر الفيلم -->
+               <button class="button">
+    <img src="https://resizing.flixster.com/0CkWwOZzrLhLfygLthzDG78UZgo=/fit-in/705x460/v2/https://resizing.flixster.com/-XZAfHZM39UwaGJIFWKAE8fS0ak=/v3/t/assets/p28568748_v_v13_ah.jpg" alt="app tv"onerror="handleImageError(this)">
+     <div class="mov-name">
+<div class="tv-name-inner" >Peter Pans Neverland Nightmare-(2025)-</div></div> 
+        <div class="link">سيرفرات المشاهدة</div> 
+           <div class="number-container">
+<div class="number" 
+     data-link="intent://dl.dropbox.com/scl/fi/m49nutn8i2y9a2ntyo506/Peter.Pans.Neverland.Nightmare.2025..AR..mp4?rlkey=3gce5dd0gvm6g4zji0klktlax&st=oagbw9r6&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
+     onclick="playStream(this)" 
+     id="btn1" 
+     tabindex="1">FHD</div>
+
+<div class="number" 
+     data-link="intent://dl.dropbox.com/scl/fi/m49nutn8i2y9a2ntyo506/Peter.Pans.Neverland.Nightmare.2025..AR..mp4?rlkey=3gce5dd0gvm6g4zji0klktlax&st=oagbw9r6&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
+     onclick="playStream(this)" 
+     id="btn2" 
+     tabindex="1">HD</div>
+     
+<div class="number" 
+     data-link="intent://dl.dropbox.com/scl/fi/m49nutn8i2y9a2ntyo506/Peter.Pans.Neverland.Nightmare.2025..AR..mp4?rlkey=3gce5dd0gvm6g4zji0klktlax&st=oagbw9r6&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
+     onclick="playStream(this)" 
+     id="btn2" 
+     tabindex="1">SD</div>
+ </div ></button> 
                <!-- ✅  زر الفيلم -->
+                <button class="button">
+    <img src="https://resizing.flixster.com/1MzJzR2AQXjYNrC9VnL7hdTNMVU=/fit-in/705x460/v2/https://resizing.flixster.com/x_IakzZARisLUuL8NZRsXj9lhHQ=/ems.cHJkLWVtcy1hc3NldHMvbW92aWVzLzI3OTA0YWVkLTNiYjQtNDJlMi04ZTA5LWEyNTRlNWYyYWU5Yi5qcGc=" alt="app tv"onerror="handleImageError(this)">
+     <div class="mov-name">
+<div class="tv-name-inner" >Moana 2-(2024)-Moana</div></div> 
+        <div class="link">سيرفرات المشاهدة</div> 
+           <div class="number-container">
+<div class="number" 
+     data-link="intent://dl.dropbox.com/scl/fi/lltywfs1dsyyqd0vv9ju9/Moana.2.2024.mp4?rlkey=1ajl2gs8bpltx8a1hjlydnc84&st=fb34d4fm&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
+     onclick="playStream(this)" 
+     id="btn1" 
+     tabindex="1">FHD</div>
+
+<div class="number" 
+     data-link="intent://dl.dropbox.com/scl/fi/lltywfs1dsyyqd0vv9ju9/Moana.2.2024.mp4?rlkey=1ajl2gs8bpltx8a1hjlydnc84&st=fb34d4fm&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
+     onclick="playStream(this)" 
+     id="btn2" 
+     tabindex="1">HD</div>
+     
+<div class="number" 
+     data-link="intent://dl.dropbox.com/scl/fi/lltywfs1dsyyqd0vv9ju9/Moana.2.2024.mp4?rlkey=1ajl2gs8bpltx8a1hjlydnc84&st=fb34d4fm&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
+     onclick="playStream(this)" 
+     id="btn2" 
+     tabindex="1">SD</div>
+ </div ></button> 
                <!-- ✅  زر الفيلم -->
-                 <button class="button">
+ <button class="button">
     <img src="https://resizing.flixster.com/fdgrdkkK5IYGx10bmp5RGVUX7Dc=/fit-in/705x460/v2/https://resizing.flixster.com/F_sBk5tMHgElDAE7FymhDvYNAOI=/ems.cHJkLWVtcy1hc3NldHMvbW92aWVzLzI3ZTJjMGE4LTQwZTYtNDllOC05OTdlLTBjYTg0MGIzMzIwNy53ZWJw" alt="app tv"onerror="handleImageError(this)">
      <div class="mov-name">
 <div class="tv-name-inner" >Moana 1-(2016)-Moana</div></div> 
