--- a/aflam-mot-0.html
+++ b/aflam-mot-0.html
@@ -442,10 +442,33 @@ box-shadow: 0 0 5px #fff;
                              <!-- ✅  زر الفيلم -->
                              <!-- ✅  زر الفيلم -->
                              <!-- ✅  زر الفيلم -->
-                             
+                              <button class="button">
+    <img src="https://resizing.flixster.com/QzrA_CpF2ASC3F6z-57peRm2QD4=/fit-in/80x126/v2/https://resizing.flixster.com/PaNyD6doQaV1He5JX9D--4lemEM=/ems.cHJkLWVtcy1hc3NldHMvbW92aWVzLzU2ZGE0M2JiLWVhM2UtNDUyOC1iZDFjLWEwNzA2NzJhYjcxZS5qcGc=" alt="app tv"onerror="handleImageError(this)">
+     <div class="mov-name">
+<div class="tv-name-inner" >Hurry Up Tomorrow-(2025)-اسرعوا غدا</div></div> 
+        <div class="link">سيرفرات المشاهدة</div> 
+           <div class="number-container">
+<div class="number" 
+     data-link="intent://stream.fushaar.link/movie/49233/49233.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end" 
+     onclick="playStream(this)" 
+     id="btn1" 
+     tabindex="1">FHD</div>
+
+<div class="number" 
+     data-link="intent://stream.fushaar.link/movie/49233/49233-480p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end" 
+     onclick="playStream(this)" 
+     id="btn2" 
+     tabindex="1">HD</div>
+     
+<div class="number" 
+     data link="intent://stream.fushaar.link/movie/49233/49233-240p.mp4/playlist.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end" 
+     onclick="playStream(this)" 
+     id="btn3" 
+     tabindex="1">SD</div>
+ </div ></button>            
                              <!-- ✅  زر الفيلم -->  
                              <button class="button">
-    <img src="https://splendid-film.de/webfile/img/113774/escape-opener.jpg?x=350&y=495" alt="app tv"onerror="handleImageError(this)">
+    <img src="https://i.imgur.com/FHFjkcn.jpeg" alt="app tv"onerror="handleImageError(this)">
      <div class="mov-name">
 <div class="tv-name-inner" >Escape-(2024)-هروب</div></div> 
         <div class="link">سيرفرات المشاهدة</div> 
