--- a/aflam-modblaja-2024.html
+++ b/aflam-modblaja-2024.html
@@ -112,10 +112,10 @@
             z-index: 0; /* لضمان ظهوره فوق المحتوى */
             align:center;
             display: inline-block; /* لجعل الزر عنصراً مستطيل الشكل */
-            padding:2px; /* تعيين الهامش الداخلي للزر */
+            padding:0px; /* تعيين الهامش الداخلي للزر */
             border-radius: 8px; /* تدوير الزوايا لتصميم أفضل */
             width: 155px;
-            height:245px;
+            height:240px;
             margin: 6px;
             border: 2px solid #ccc;
             background: #3c4a71; 
@@ -128,7 +128,8 @@
     width: 100%; /* ضمان أن العرض 100% */
     height: 130px; /* تعديل الارتفاع حسب الحاجة */
     position: relative; /* إضافة لتحديد موضع العناصر داخل الحاوية */
-    top:-5px;
+    margin-top:-5px;    
+    margin-bottom: 0px; /* تترك مساحة للقائمة السفلية */
     border-radius: 8px;
 }
 
@@ -171,7 +172,8 @@
     border-radius: 8px;
     top:-10px;
     border-top: 2px solid #d0368a;
-    margin-top:4px;
+    margin-top:1px;    
+    margin-bottom: 0px; /* تترك مساحة للقائمة السفلية */
     width: 140px; /* عرض الحاوية */
     height: 20px;
         }
@@ -2441,4 +2443,5 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
