--- a/افلام عربي.html
+++ b/افلام عربي.html
@@ -468,7 +468,7 @@ text-decoration:none;
                               <button class="button">
     <img src="https://upimg.my/apis/56099c54-618a-4b7d-9c2c-93cc6e0601f0/movies/20270.webp" alt="app tv"onerror="handleImageError(this)">
      <div class="mov-name">
-        <div class="tv-name-inner" >Project.X(2025)-Project.X</div></div> 
+        <div class="tv-name-inner" >Project.X(2025)-X مشروع </div></div> 
         <div class="link">سيرفرات المشاهدة</div> 
            <div class="number-container">
 <div class="number" 
