--- a/افلام عربي.html
+++ b/افلام عربي.html
@@ -418,11 +418,11 @@ text-decoration:none;
                <!-- icon-reply -->
 
                   <!-- icon-reply -->
-                <a onclick="window.open('go:1')"tabindex="0">
+<a onclick="history.back()" tabindex="0" title="الرجوع" role="button">
     <svg width="25" height="20" fill="#fff" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
         <path d="M209.4 39.5c-9.1-9.6-24.3-10-33.9-.9L33.8 173.2c-19.9 18.9-19.9 50.7 0 69.6L175.5 377.4c9.6 9.1 24.8 8.7 33.9-.9s8.7-24.8-.9-33.9L66.8 208 208.5 73.4c9.6-9.1 10-24.3 .9-33.9zM352 64c0-12.6-7.4-24.1-19-29.2s-25-3-34.4 5.4l-160 144c-6.7 6.1-10.6 14.7-10.6 23.8s3.9 17.7 10.6 23.8l160 144c9.4 8.5 22.9 10.6 34.4 5.4s19-16.6 19-29.2l0-64 32 0c53 0 96 43 96 96c0 30.4-12.8 47.9-22.2 56.7c-5.5 5.1-9.8 12-9.8 19.5c0 10.9 8.8 19.7 19.7 19.7c2.8 0 5.6-.6 8.1-1.9C494.5 467.9 576 417.3 576 304c0-97.2-78.8-176-176-176l-48 0 0-64z"></path>
     </svg>
-                </a>
+</a>
                    <!-- icon-reply -->
                    
                  <!-- icon-logo -->
@@ -909,8 +909,9 @@ document.addEventListener("DOMContentLoaded", function () {
     //✅ دالة التعامل مع خطأ تحميل الصورة
     function handleImageError(img) {
         // تغيير مصدر الصورة إلى صورة بديلة في حال حدوث خطأ في تحميل الصورة الأصلية
-        img.src = "https://raw.githubusercontent.com/aminemk640/Movies-free/refs/heads/main/00.png";
+        img.src = "https://raw.githubusercontent.com/aminemk640/Movies-free/refs/heads/main/00.png?text=صورة+غير+متاحة'; // صورة بديلة";
         img.onerror = null; // إيقاف محاولة تحميل الصورة مرة أخرى
+        
     }
 </script>
 
@@ -936,8 +937,18 @@ document.addEventListener("DOMContentLoaded", function () {
   </script>
 
 
+ <script> 
+// يفضل وضعه بعد إغلاق $(document).ready(...)
 
-
+$(document).on('keydown', function(event) {
+    // التحقق من زر "X" أو "الرجوع" في جهاز التحكم (عادةً Backspace أو Escape)
+    if (event.key === 'Backspace' || event.key === 'Escape' || event.keyCode === 461) {
+        // keyCode 461 هو رمز شائع لزر العودة في Android TV
+        history.back(); // العودة إلى الصفحة السابقة في السجل
+        event.preventDefault(); // منع السلوك الافتراضي للمتصفح (لتجنب الرجوع المزدوج أو إغلاق التطبيق)
+    }
+});
+ </script>
 </body>
 </html>
 
