Update movies-horror-01 .html

--- a/movies-horror-01 .html
+++ b/movies-horror-01 .html
@@ -462,12 +462,22 @@ text-decoration:none;
                              <!-- ✅  زر الفيلم -->
                              
                              <!-- ✅  زر الفيلم -->
-                             
+                              <!-- ✅  زر الفيلم -->
+ <button class="button">
+    <img src="https://fr.web.img6.acsta.net/c_310_420/img/36/fb/36fb45edeb926327f8ca0f3c74315aa4.jpg" alt="app tv"onerror="handleImageError(this)">
+     <div class="mov-name">
+        <div class="tv-name-inner" >Bring Her Back-(2025)-أعدها </div></div> 
+        <div class="link">سيرفرات المشاهدة</div> 
+           <div class="number-container">
+ <div class="number" onclick="window.open('intent://stream.fushaar.link/movie/49379/49379.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end')" id="remot" tabindex="1">FHD</div>
+                <div class="number" onclick="window.open('intent://stream.fushaar.link/movie/49379/49379-480p.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end')" id="remot" tabindex="1">HD</div>
+                <div class="number" onclick="window.open('intent://stream.fushaar.link/movie/49379/49379-240p.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end')" id="remot" tabindex="1">SD</div>
+            </div></button>
                              <!-- ✅  زر الفيلم --> 
                               <button class="button">
     <img src="https://resizing.flixster.com/0CkWwOZzrLhLfygLthzDG78UZgo=/fit-in/705x460/v2/https://resizing.flixster.com/-XZAfHZM39UwaGJIFWKAE8fS0ak=/v3/t/assets/p28568748_v_v13_ah.jpg" alt="app tv"onerror="handleImageError(this)">
      <div class="mov-name">
-<div class="tv-name-inner" >Peter Pans Neverland Nightmare-(2025)-</div></div> 
+<div class="tv-name-inner" >Peter Pans Neverland Nightmare-(2025)-مدبلج-</div></div> 
         <div class="link">سيرفرات المشاهدة</div> 
            <div class="number-container">
 <div class="number" 
@@ -518,7 +528,7 @@ text-decoration:none;
                               <button class="button">
     <img src="https://resizing.flixster.com/OJqeRkYRVnVvnm-r2cHTKzPsCr0=/206x305/v2/https://resizing.flixster.com/4piFgrjX_dbjitE78ILbti9RWZs=/ems.cHJkLWVtcy1hc3NldHMvbW92aWVzLzY3ZWI3ZWI0LTJkNTYtNGViZC05NjIxLTY4Y2NkYTViOGE1Mi5qcGc=" alt="app tv"onerror="handleImageError(this)">
      <div class="mov-name">
-        <div class="tv-name-inner" >Until Dawn-(2024)-حتى الفجر</div></div> 
+        <div class="tv-name-inner" >Until Dawn-(2024)-مدبلج--حتى الفجر</div></div> 
         <div class="link">سيرفرات المشاهدة</div> 
            <div class="number-container">
 <div class="number" 
@@ -543,7 +553,7 @@ text-decoration:none;
                                <button class="button">
     <img src="https://resizing.flixster.com/gLnc5SzmOCyCJLnKMFJBQM2xAW4=/206x305/v2/https://resizing.flixster.com/NkIqUFGlPZwDqziUn_4x_zwRSy4=/ems.cHJkLWVtcy1hc3NldHMvbW92aWVzLzE3ODE2OTQ0LWQyZWEtNDIxMi05NTQ1LTZkYWQ4OTdjZDdkZC5qcGc=" alt="app tv"onerror="handleImageError(this)">
      <div class="mov-name">
-        <div class="tv-name-inner" >Terrifier 3-(2024)-المرعب 3</div></div> 
+        <div class="tv-name-inner" >Terrifier 3-(2024)-مدبلج--المرعب 3</div></div> 
         <div class="link">سيرفرات المشاهدة</div> 
            <div class="number-container">
 <div class="number" 
@@ -568,7 +578,7 @@ text-decoration:none;
  <button class="button">
     <img src="https://m.media-amazon.com/images/I/81yMrYZJmIL._AC_UY218_.jpg" alt="app tv"onerror="handleImageError(this)">
      <div class="mov-name">
-        <div class="tv-name-inner" >The Rule of Jenny Pen-(2024)-</div></div> 
+        <div class="tv-name-inner" >The Rule of Jenny Pen-(2024)--مدبلج-</div></div> 
         <div class="link">سيرفرات المشاهدة</div> 
            <div class="number-container">
 <div class="number" 
@@ -593,7 +603,7 @@ text-decoration:none;
              <button class="button">
     <img src="https://m.media-amazon.com/images/I/81LeHDpjazL._AC_UY218_.jpg" alt="app tv"onerror="handleImageError(this)">
      <div class="mov-name">
-        <div class="tv-name-inner" >Screamboat-(2024)-قارب الصراخ</div></div> 
+        <div class="tv-name-inner" >Screamboat-(2024)-قارب الصراخ-مدبلج-</div></div> 
         <div class="link">سيرفرات المشاهدة</div> 
            <div class="number-container">
 <div class="number" 
@@ -619,7 +629,7 @@ text-decoration:none;
   <button class="button">
     <img src="https://m.media-amazon.com/images/I/91qMd51aqvL._AC_UY218_.jpg" alt="app tv"onerror="handleImageError(this)">
      <div class="mov-name">
-        <div class="tv-name-inner" >Silent Zone-(2025)-المنطقة الصامتة</div></div> 
+        <div class="tv-name-inner" >Silent Zone-(2025)-مدبلج--المنطقة الصامتة</div></div> 
         <div class="link">سيرفرات المشاهدة</div> 
            <div class="number-container">
 <div class="number" 
