Update movies-horror-01 .html

--- a/movies-horror-01 .html
+++ b/movies-horror-01 .html
@@ -460,7 +460,16 @@ text-decoration:none;
                              <!-- ✅  زر الفيلم -->
                              
                              <!-- ✅  زر الفيلم -->
-                                                         
+                                         <button class="button">
+    <img src="https://resizing.flixster.com/D6aLbOtCJdj4ItAJL_UgDI_lzzA=/206x305/v2/https://resizing.flixster.com/6tN0EV8bpLlniaruV4B66EhWypw=/ems.cHJkLWVtcy1hc3NldHMvbW92aWVzL2NmN2EyZGIzLWM4OTEtNDE5ZS04Yzk2LTdhOTJhZGQyY2U1Ni5qcGc=" alt="app tv"onerror="handleImageError(this)">
+     <div class="mov-name">
+        <div class="tv-name-inner" >Never Let Go-(2024)-لا تترك أبدا</div></div> 
+        <div class="link">سيرفرات المشاهدة</div> 
+           <div class="number-container">
+ <div class="number" onclick="window.open('intent://stream.fushaar.link/movie/48442/48442.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end')" id="remot" tabindex="1">FHD</div>
+                <div class="number" onclick="window.open('intent://stream.fushaar.link/movie/48442/48442-480p.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end')" id="remot" tabindex="1">HD</div>
+                <div class="number" onclick="window.open('intent://stream.fushaar.link/movie/48442/48442-240p.mp4/chunk.m3u8?wmsAuthSign=#Intent;scheme=https;package=co.wuffy.player;end')" id="remot" tabindex="1">SD</div>
+            </div></button>                
                               <!-- ✅  زر الفيلم -->
  <button class="button">
     <img src="https://resizing.flixster.com/D6aLbOtCJdj4ItAJL_UgDI_lzzA=/206x305/v2/https://resizing.flixster.com/npImmZA3sQ2JUvZyz0p29hUGmgs=/ems.cHJkLWVtcy1hc3NldHMvbW92aWVzLzhjZjYwMDAyLWUwOGQtNGZmNy05YzMyLTcxMzE2Yzk5ZmRlMS5qcGc=" alt="app tv"onerror="handleImageError(this)">
@@ -1041,7 +1050,7 @@ document.addEventListener("DOMContentLoaded", function () {
 </script>
 
 
-<audio id="hoverSound" src="https://sounds.pond5.com/game-interface-hover-sound-1-sound-effect-221424346_nw_prev.m4a" preload="auto"></audio>
+<audio id="hoverSound" src="https://github.com/ahmadmk2023/Movies-free1/raw/refs/heads/main/mp3/btn-hover01.mp3" preload="auto"></audio>
 
 <script>
     // تشغيل الصوت عند التأشير أو التركيز
