--- a/aflam-modblaja-2024.html
+++ b/aflam-modblaja-2024.html
@@ -468,7 +468,7 @@ text-decoration:none;
                 <button class="button">
     <img src="https://resizing.flixster.com/D6aLbOtCJdj4ItAJL_UgDI_lzzA=/206x305/v2/https://resizing.flixster.com/-XZAfHZM39UwaGJIFWKAE8fS0ak=/v3/t/assets/p29026593_p_v13_aa.jpg" alt="app tv"onerror="handleImageError(this)">
      <div class="mov-name">
-     <div class="tv-name-inner" >Rich Flu(2024)- </div> </div>
+     <div class="tv-name-inner" >Rich Flu(2024)-ريتش فلو </div> </div>
         <div class="link">سيرفرات المشاهدة</div>
            <div class="number-container">
 <div class="number" 
