--- a/aflam-modblaja-2024.html
+++ b/aflam-modblaja-2024.html
@@ -475,7 +475,29 @@ text-decoration:none;
                <!-- ✅  زر الفيلم -->
 
                <!-- ✅  زر الفيلم -->
-                
+                <button class="button">
+    <img src="https://resizing.flixster.com/1iYbHs1iqDwUUIhrk9BVpQLDViY=/206x305/v2/https://resizing.flixster.com/sztYWQ9vBo1gd_Jqi6W_oSXRg_o=/ems.cHJkLWVtcy1hc3NldHMvbW92aWVzLzA1MDc1NGZiLWI5NDQtNDYyMy04M2Y0LTlhMzBiZWE4MzE2ZS5qcGc=" alt="app tv"onerror="handleImageError(this)">
+     <div class="mov-name">
+     <div class="tv-name-inner" >Armor-(2024)-درع</div> </div>
+        <div class="link">سيرفرات المشاهدة</div>
+           <div class="number-container">
+<div class="number" 
+     data-link="intent://dl.dropbox.com/scl/fi/9jbsj1hs1yk8s67l3zysq/Armor.2024...AR.HQ.DUB.mp4?rlkey=kv4jrxhvwnarnr2ffkqtsln6e&st=gk2ft5bf&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
+     onclick="playStream(this)" 
+     id="btn1" 
+     tabindex="0">FHD</div>
+
+<div class="number" 
+     data-link="intent://dl.dropbox.com/scl/fi/9jbsj1hs1yk8s67l3zysq/Armor.2024...AR.HQ.DUB.mp4?rlkey=kv4jrxhvwnarnr2ffkqtsln6e&st=gk2ft5bf&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
+     onclick="playStream(this)" 
+     id="btn2" 
+     tabindex="1">HD</div>
+     
+<div class="number" 
+     data-link="intent://dl.dropbox.com/scl/fi/9jbsj1hs1yk8s67l3zysq/Armor.2024...AR.HQ.DUB.mp4?rlkey=kv4jrxhvwnarnr2ffkqtsln6e&st=gk2ft5bf&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
+     onclick="playStream(this)" 
+     id="btn2" 
+     tabindex="1">SD</div></div ></button>
                <!-- ✅  زر الفيلم -->
                 <button class="button">
     <img src="https://resizing.flixster.com/VpjdNtJ-KoNZtTnD3bK5serA_Do=/fit-in/705x460/v2/https://resizing.flixster.com/SmFbanoZwH3Zu1VDR4KP_fQT_HQ=/ems.cHJkLWVtcy1hc3NldHMvbW92aWVzL2FkMTBkYjYwLTdjNmYtNDQzZi1hMzU1LWMzMTkxODYwMTQxNS5qcGc=" alt="app tv"onerror="handleImageError(this)">
@@ -2937,6 +2959,8 @@ $(document).on('keydown', function(event) {
 
 </body>
 </html>
+
+
 
 
 
