--- a/aflam-modblaja-2024.html
+++ b/aflam-modblaja-2024.html
@@ -500,13 +500,13 @@ text-decoration:none;
         <div class="link">سيرفرات المشاهدة</div>
            <div class="number-container">
 <div class="number" 
-     data-link="intent://gkihdbaseo.baderraw.com/files/7/uzaa1brj5vo75z/M3GAN.2.0.2025.720p.HDTS.AR.EgyDead.CoM.mp4#Intent;scheme=https;package=co.wuffy.player;end" 
+     data-link="intent://dl.dropbox.com/scl/fi/f6zjbgqwgtcvlvq6g2fam/MEGAN.2.ts?rlkey=ok1ldb14go8nfw6f55jlao9kv&st=kwa67b0c&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
      onclick="playStream(this)" 
      id="btn1" 
      tabindex="0">FHD</div>
 
 <div class="number" 
-     data-link="intent://gkihdbaseo.baderraw.com/files/7/uzaa1brj5vo75z/M3GAN.2.0.2025.720p.HDTS.AR.EgyDead.CoM.mp4#Intent;scheme=https;package=co.wuffy.player;end" 
+     data-link="intent://dl.dropbox.com/scl/fi/f6zjbgqwgtcvlvq6g2fam/MEGAN.2.ts?rlkey=ok1ldb14go8nfw6f55jlao9kv&st=kwa67b0c&dl=1#Intent;scheme=https;package=co.wuffy.player;end" 
      onclick="playStream(this)" 
      id="btn2" 
      tabindex="1">HD</div>
